# Alimer.Bindings.SDL

./: Alimer.Bindings.SDL.sln  Alimer.Native.SDL.sln  CMakeLists.txt  Directory.Build.props  Directory.Build.targets  README.md  build.cake  global.json
.github/workflows/: build.yml  build_sdl_native.yml  main.yml
Alimer.Bindings.SDL/: Alimer.Bindings.SDL.csproj  NativeLibrary.cs  SDL.Clipboard.cs  SDL.Gamepad.cs  SDL.Joystick.cs  SDL.Sensor.cs  SDL.Touch.cs  SDL.cs  SDL_AudioDeviceID.cs  SDL_Cursor.cs  SDL_DisplayID.cs  SDL_GLContext.cs  SDL_Gamepad.cs  SDL_Joystick.cs  SDL_JoystickID.cs  SDL_Renderer.cs  SDL_Sensor.cs  SDL_SensorID.cs  SDL_Surface.cs  SDL_TouchID.cs  SDL_Window.cs
Alimer.Bindings.SDL/runtimes/linux-x64/native/: libSDL2-2.0.so.0  libSDL3-0.0.so.0
Alimer.Bindings.SDL/runtimes/osx-universal/native/: libSDL2.dylib  libSDL3.dylib
Alimer.Native.SDL/: Alimer.Native.SDL.csproj  SDL.cs
samples/HelloWorld/: HelloWorld.csproj  Program.cs
sdl/: CMakeLists.txt
sdl/cmake/: CheckCPUArchitecture.cmake
sdl/src/main/windows/: version.rc
src/Alimer.Bindings.SDL/: Alimer.Bindings.SDL.csproj  NativeTypeNameAttribute.cs  SDL.Audio.cs  SDL.Camera.cs  SDL.Clipboard.cs  SDL.Events.cs  SDL.Gamepad.cs  SDL.Haptic.cs  SDL.Joystick.cs  SDL.Keycode.cs  SDL.Mouse.cs  SDL.Pen.cs  SDL.Pixels.cs  SDL.Sensor.cs  SDL.Touch.cs  SDL.cs  SDLBool.cs  SDL_AudioDeviceID.cs  SDL_AudioFormat.cs  SDL_AudioStream.cs  SDL_Camera.cs  SDL_CameraDeviceID.cs  SDL_Cursor.cs  SDL_DisplayID.cs  SDL_FingerID.cs  SDL_GLContext.cs  SDL_GLContextFlag.cs  SDL_GPUColorAttachmentBlendState.cs  SDL_GPUColorTargetBlendState.cs  SDL_GPUDepthStencilState.cs  SDL_GPUDepthStencilValue.cs  SDL_GPUMultisampleState.cs  SDL_GPURasterizerState.cs  SDL_GPUStencilOpState.cs  SDL_GPUVertexAttribute.cs  SDL_GPUVertexBinding.cs  SDL_GPUVertexBufferDescription.cs  SDL_GPUViewport.cs  SDL_Gamepad.cs  SDL_Haptic.cs  (+16 more)
src/Alimer.Bindings.SDL/runtimes/linux-x64/native/: libSDL3-0.0.so.0  libSDL3.so.0.0.0
src/Alimer.Bindings.SDL/runtimes/osx-universal/native/: libSDL3.dylib
src/Alimer.Bindings.SDL/runtimes/osx/native/: libSDL3.dylib
src/Generator/: CodeWriter.cs  CsCodeGenerator.Commands.cs  CsCodeGenerator.Constants.cs  CsCodeGenerator.Enum.cs  CsCodeGenerator.Handles.cs  CsCodeGenerator.Structs.cs  CsCodeGenerator.cs  CsCodeGeneratorOptions.cs  Generator.csproj  Program.cs
src/Generator/include/SDL3/: SDL_properties.h
