cmake_minimum_required(VERSION 3.16 FATAL_ERROR)

project(SDL3)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_C_STANDARD 99)

# Configure CMake global variables
set(CMAKE_INSTALL_MESSAGE LAZY)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

set(CMAKE_OSX_DEPLOYMENT_TARGET "10.15" CACHE STRING "Minimum OS X deployment version")
set(CMAKE_OSX_ARCHITECTURES "x86_64;arm64" CACHE STRING "Build architectures for OS X")

# SDL3
set(SDL_SHARED ON CACHE BOOL "Build a SDL shared library")
set(SDL_STATIC OFF CACHE BOOL "Build a SDL static library")
set(SDL_TESTS OFF CACHE BOOL "Disable SDL tests")
set(SDL_TEST_LIBRARY OFF CACHE BOOL "Disable SDL test library")

include(FetchContent)
FetchContent_Declare(
    SDL3
    GIT_REPOSITORY https://github.com/libsdl-org/SDL
    GIT_TAG 0f81598e9f5336a7169f8a6c0c6ce075c7c1c168
    GIT_PROGRESS TRUE
)
FetchContent_MakeAvailable(SDL3)
